Шеринг: Теперь функционал действительно реализован + Улучшения и багфиксы
