# internal/rest/boardshr/link_use.go
@@ -2,29 +2,33 @@ package rest
 
 import (
 	"context"
+	"errors"
 	"net/http"
 
+	service "github.com/go-park-mail-ru/2025_1_SuperChips/boardshr"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest"
 	auth "github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest/auth"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/validator"
 )
 
 // UseInvitationLink godoc
+//
 //	@Summary		Join via link
 //	@Description	Join the board via invitation link as co-author; link mustn't be expired and, if link is private, user must be in group
 //	@Tags			Board sharing [coauthor]
 //	@Produce		json
 //	@Security		jwt_auth
 //
-//	@Param			link	path		string			true	"Link"
+//	@Param			link	path		string										true	"Link"
 //
-//	@Success		200		{object}	ServerResponse	"User has successfully become a coauthor of the board"
-//	@Failure		400		{object}	ServerResponse	"Invalid request parameters"
-//	@Failure		401		{object}	ServerResponse	"Unauthorized"
-//	@Failure		403		{object}	ServerResponse	"Forbidden - access denied"
-//	@Failure		409		{object}	ServerResponse	"User is already coauthor"
-//	@Failure		410		{object}	ServerResponse	"Link's time or usage limit has expired"
-//	@Failure		500		{object}	ServerResponse	"Internal server error"
+//	@Success		200		{object}	ServerResponse								"User has successfully become a coauthor of the board"
+//	@Failure		400		{object}	ServerResponse								"Invalid request parameters"
+//	@Failure		401		{object}	ServerResponse								"Unauthorized"
+//	@Failure		403		{object}	ServerResponse								"Forbidden - access denied"
+//	@Failure		404		{object}	ServerResponse								"Link not found"
+//	@Failure		409		{object}	ServerResponse{data=object{board_id=int}}	"User is already coauthor"
+//	@Failure		410		{object}	ServerResponse								"Link's time or usage limit has expired"
+//	@Failure		500		{object}	ServerResponse								"Internal server error"
 //
 //	@Router			/api/v1/join/{link} [post]
 func (b *BoardShrHandler) UseInvitationLink(w http.ResponseWriter, r *http.Request) {
@@ -48,9 +52,23 @@ func (b *BoardShrHandler) UseInvitationLink(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	err := b.BoardShrService.UseInvitationLink(ctx, userID, link)
-	if err != nil {
+	boardID, err := b.BoardShrService.UseInvitationLink(ctx, userID, link)
+	if err != nil && !errors.Is(err, service.ErrAlreadyEditor) {
 		handleBoardShrError(w, err)
+		return
+	}
+
+	// Сценарий: пользователь уже является соавтором доски.
+	if errors.Is(err, service.ErrAlreadyEditor) {
+		type DataReturn struct {
+			BoardID int `json:"board_id"`
+		}
+
+		resp := rest.ServerResponse{
+			Description: http.StatusText(http.StatusConflict),
+			Data:        DataReturn{BoardID: boardID},
+		}
+		rest.ServerGenerateJSONResponse(w, resp, http.StatusConflict)
 		return
 	}
 
